--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,19 @@
 	<groupId>com.xiejh</groupId>
 	<artifactId>java-practice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>java-practice</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <name>java-practice</name>
 
 	<properties>
 		<java.version>1.8</java.version>
